--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+
+
+        .content1 {
+            background-color: violet ;
+        }
+
+        .content{
+            border: solid 5px  black;
+            padding: 50px;
+            width:20%;
+   
+            background-color:yellow
+        }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vidhi's Website</title>
 </head>
 <body>
-    <h1> Learning Web Hosting and Git</h1>
-    <h2> Let's do it!</h2>
+    <div class="main-container">
+        <div  id="text1" class="content content1">
+            HEllo World!!
+        </div>
+
+    </div>
 </body>
 </html>
