--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="main-container">
         <nav class="navbar">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Vidhi Mittal</a>
+              <a class="navbar-brand" href="#"><b>Vidhi Mittal</b></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -23,7 +23,7 @@
                 <div class="offcanvas-body">
                   <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Brief Intro</a>
+                      <a class="nav-link active" aria-current="page" href="#brief-intro">Brief Intro</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">Educational</a>
@@ -42,8 +42,19 @@
           <div class="first-container">
             <p>VIDHI'sWEBSITE</p>
         </div>
-        <div class="second-container">
-
+        <div class="second-container" id="brief-intro">
+          <p>Web Design</p>
+          <div id="circle-container">
+            <div class="circle1">
+            <div class="circle2"></div>
+          </div>
+        </div>
+            <p>AboutME in brief</p>
+        </div>
+        <div class="third-container">
+          <p>Education & skills</p>
+          <div class="card1"></div>
+          <div class="card2"></div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </div>
